--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "click-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nguyenchris.github.io/click-game/",
+  "homepage": "https://nguyenchris.github.io/click-game",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
